# crates.alfredworkflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: index.rs  logger.rs  main.rs  registry.rs
src/index/: detach.rs  logger.rs  mod.rs  mutex.rs  nix.rs
src/registry/: fuzzy.rs  list.rs  mod.rs
workflow/: info.plist
