[package]
name = "crates-alfred-workflow"
version = "0.3.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
either = "1.8.0"
fmutex = "0.1.0"
home = "0.5.3"
libc = "0.2.134"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.15.0"
powerpack = { version = "0.4.2", features = ["detach"] }
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
