[package]
name = "crates-alfred-workflow"
version = "0.4.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
either = "1.9.0"
fmutex = "0.1.0"
home = "0.5.5"
libc = "0.2.147"
log = { version = "0.4.19", features = ["std"] }
once_cell = "1.18.0"
powerpack = { version = "0.4.2", features = ["detach"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
